--- a/composer.json
+++ b/composer.json
@@ -15,12 +15,12 @@
     ],
     "minimum-stability": "stable",
     "require": {
-            "php": ">=7.2.5",
-            "illuminate/contracts": "5.5.*|5.6.*|5.7.*|5.8.*|6.*",
-            "illuminate/support": "5.5.*|5.6.*|5.7.*|5.8.*|6.*",
-            "mautic/api-library":"2.16.1",
-            "guzzlehttp/guzzle": "^6.3",
-            "graham-campbell/manager": "^4.5"
+        "php": ">7.2.5",
+        "illuminate/contracts": "7.*|8.*",
+        "illuminate/support": "7.*|8.*",
+        "mautic/api-library":"3.0.0",
+        "guzzlehttp/guzzle": "^7.2",
+        "graham-campbell/manager": "^4.5"
         },
     "autoload": {
         "psr-4": {
